Fix vertical alignment of file-input-buttons

--- a/app/styles/components/forms/_file-input-button.scss
+++ b/app/styles/components/forms/_file-input-button.scss
@@ -1,3 +1,8 @@
+.file-input-button {
+  position: relative;
+  top: 5px;
+}
+
 .file-input-button__input {
   display: none;
 }
